[tool.poetry]
name = "rlworld"
version = "0.1.0"
description = ""
authors = ["SokolSlav <socoluk321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mubble = "^1.0.0"
tortoise-orm = "^0.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
